# transcribe

./: .gitignore  LICENSE  README.md  __init__.py  audio.py  cli.py  development.md  flake.nix  pyproject.toml  requirements.txt  transcribe.py
docs/: api.md  index.md  usage.md
transcribe/: __init__.py  __main__.py  alignment.py  audio.py  cli.py  diarization.py  download.py  models.py  output.py
transcribe/tests/: __init__.py  conftest.py  test_alignment.py  test_download.py  test_integration.py  test_models.py  test_output.py
