[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "transcribe"
version = "0.1.0"
description = "Arabic-English audio transcription with speaker diarization"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Darth-218"}
]
dependencies = [
    "torch",
    "faster-whisper", 
    "pyannote.audio",
    "soundfile",
    "librosa",
    "numpy",
    "scipy",
    "huggingface-hub",
]

[tool.pytest.ini_options]
testpaths = ["transcribe/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
source = ["transcribe"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]